--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,10 @@
         "php": "^8.2",
         "filament/filament": "^4.0",
         "laravel/framework": "^12.0",
-        "laravel/tinker": "^2.10.1"
+        "laravel/tinker": "^2.10.1",
+        "ralphjsmit/laravel-seo": "^1.7",
+        "spatie/laravel-medialibrary": "^11.0",
+        "spatie/laravel-settings": "^3.0"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
