--- a/composer.json
+++ b/composer.json
@@ -8,8 +8,10 @@
     "require": {
         "php": "^8.2",
         "filament/filament": "^4.0",
+        "filament/spatie-laravel-media-library-plugin": "^4.0",
         "laravel/framework": "^12.0",
         "laravel/tinker": "^2.10.1",
+        "ralphjsmit/laravel-filament-seo": "^2.0",
         "ralphjsmit/laravel-seo": "^1.7",
         "spatie/laravel-medialibrary": "^11.0",
         "spatie/laravel-settings": "^3.0"
